syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
package Proto;

message PaymentMethodResult {
  int32 last_four_digits =   1;
  string full_name =   2;
  google.protobuf.FieldMask fieldMask = 3;
}

message PaymentResult {
  string token =  1;
}

message MakePaymentRequest {
  string token =   1;
  double amount =   2;
  google.protobuf.FieldMask fieldMask = 3;
}

message CreatePaymentMethodRequest {
  int32 last_four_digits =   1;
  google.protobuf.Timestamp expiration_date =   2;
  string full_name =   3;
  string token =   4;
  string username =   5;
  google.protobuf.FieldMask fieldMask = 6;
}

message HibridPayment {
    double parky_coins_amount = 1;
    double other_payment_method_amount = 2;
    double total_cost = 3;
    bool is_successfull = 4;
}

message GetPaymentMethodListRequest {
    string username = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message ListPaymentMethodResult {
    repeated PaymentMethodResult list_payment_method = 1;
}