syntax = "proto3";
package Protos;
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message PaymentRequest {
    string token = 1;
    double amount = 2;
    google.protobuf.FieldMask fieldMask = 3;
}

message PaymentResponse {
    bool result = 1;
    string confirmation = 2;
}

message AddTokenRequest {
    string token = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message AddTokenResponse {
    bool result = 1;
}

message GenerateTokenRequest {
    int32 CardNumber = 1;
    int32 Cvv = 2;
    string FullName = 3;
    google.protobuf.Timestamp ExpirationDate = 4;
    google.protobuf.FieldMask fieldMask = 5;
}

message GenerateTokenResponse {
    string token = 1;
}