syntax = "proto3";
package Proto;
import "vehicle.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message CreateDashboardUsageParkyCoinsRequest {
    string parkName = 1;
    google.protobuf.Timestamp initialDate = 2;
    google.protobuf.Timestamp endDate = 3;
    VehicleType vehicleType = 4;
    int32 totalMinutes = 5;
    google.protobuf.FieldMask fieldMask = 6;
}

message CreateDashboardUsageParkyCoinsResult {
    repeated CustomerParkyCoinsSpentResult userParkyCoinsSpentResultDtos = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message CustomerParkyCoinsSpentResult {
    string Username = 1;
    double ParkyCoinsSpent = 2;
    google.protobuf.FieldMask fieldMask = 3;
}